force-app/main/default/objects/Int_Agreement_Party__c/Int_Agreement_Party__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Party</description>
    <label>Int Agreement Party</label>
    <nameField>
        <displayFormat>API-{0000000000}</displayFormat>
        <label>Agreement Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>