force-app/main/default/objects/Int_Agreement_Party__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agreement Name</description>
    <label>Agreement Name</label>
    <referenceTo>Int_Agreement__c</referenceTo>
    <relationshipLabel>Int Agreements Parties</relationshipLabel>
    <relationshipName>Int_Agreements_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>