force-app/main/default/objects/Int_Agreement_Party__c/fields/Party_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_Number__c</fullName>
    <description>Agreement Number</description>
    <label>Party Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>