force-app/main/default/objects/Int_Agreement_Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Name__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Agreement_Source_System__c</columns>
    <columns>Committed__c</columns>
    <columns>Party_Name__c</columns>
    <columns>Party_Number__c</columns>
    <columns>Party_Role_Type_Code__c</columns>
    <columns>Party_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>